--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,7 @@
         "google/cloud/servicemanagement/gapic_version.py",
         {
           "type": "json",
-          "path": "samples/generated_samples/snippet_metadata_servicemanagement_v1.json",
+          "path": "samples/generated_samples/snippet_metadata_google.api.servicemanagement.v1.json",
           "jsonpath": "$.clientLibrary.version"
         }
       ]
